syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Payment.Requests";

import "google/protobuf/wrappers.proto";

import "cashier_dtos.proto";

package edoxa.services.payment;

message CreateStripePaymentIntentRequest {
  cashier.TransactionDto transaction = 1;
  google.protobuf.StringValue paymentMethodId = 2;
}

message CreatePaypalPayoutRequest {
  google.protobuf.StringValue email = 1;
  cashier.TransactionDto transaction = 2;
}

message CreateStripeBankAccountRequest {
  string token = 1;
}

message AttachStripePaymentMethodRequest {
  bool defaultPaymentMethod = 1;
}

message UpdateStripePaymentMethodRequest {
  int64 expMonth = 1;
  int64 expYear = 2;
}