syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Payment.Responses";

package edoxa.services.payment;

message CreateStripePaymentIntentResponse {
  string clientSecret = 1;
}

message CreatePaypalPayoutResponse {}